# Client-Server_Mailer

./: .gitignore  CMakeLists.txt
MyClient/: Makefile  myclient.cpp
MyServer/: .Makefile.swn  .Makefile.swo  .Makefile.swp  DeleteMessage.cpp  DeleteMessage.h  ListMessage.cpp  ListMessage.h  Makefile  ReadMessage.cpp  ReadMessage.h  SendMessage.cpp  SendMessage.h  ServerOperation.cpp  ServerOperation.h  myserver.cpp
